--- a/metadata.yaml
+++ b/metadata.yaml
@@ -37,6 +37,7 @@ subjects:
 - !lcsh 'Science fiction -- Periodicals'
 - !lcc 'PN'
 - !lcsh 'Science fiction, American -- Periodicals'
+- GITenberg
 tableOfContents: "The Wall of Death / Victor Rousseau \r\nThe Pirate Planet (Part\
   \ 1 of 4) / Charles Willard Diffin\r\nThe Destroyer / William Merriam Rouse \r\n\
   The Gray Plague / Lloyd Arthur Eshbach\r\nJetta of the Lowlands (Part 3 of 3) /\
